--- a/index.html
+++ b/index.html
@@ -64,25 +64,24 @@
                         На экранах
                         <span>С 3 марта 2013 по сей день</span>
                     </li>
-                </ul>    
+                </ul>
                 <div class="about__text">
                     <p>
                         Викинги – шикарный исторический сериал, один из лучших в своем жанре, шоу может похвастаться огромной фан-базой, а также тем, что пробудил интерес к истории и возродил моду на викингов.
                     </p>
                     <p>
                         «Викинги» созданы по заказу канала американского канала History, однако работали над ним канадцы и ирландцы. Сериал поражает масштабными сценами сражений, добротным и глубоким сценарием, а также максимальным вниманием к исторической эпохи. Авторы сериала
-                        потратили кучу времени и денег (бюджет первого сезона - $40 млн, дальше суммы возросли) на то, чтобы викинги и их современники выглядели в шоу так, какими они был в свое время – VIII – IX веках нашей эры. С другой стороны –
-                        отсутствие точных исторических фактов и (полу)легендарность многих событий позволили авторам сериала вольную трактовку многих событий.
+                        потратили кучу времени и денег (бюджет первого сезона - $40 млн, дальше суммы возросли) на то, чтобы викинги и их современники выглядели в шоу так, какими они был в свое время – VIII – IX веках нашей эры. С другой стороны – отсутствие
+                        точных исторических фактов и (полу)легендарность многих событий позволили авторам сериала вольную трактовку многих событий.
                     </p>
-                </div>    
+                </div>
             </div>
         </div>
     </section>
     <section class="video">
         <div class="container">
             <h3 class="video__text">
-                <span>Storm</span>
-                Is Coming...
+                <span>Storm</span> Is Coming...
             </h3>
             <a class="video__btn" data-fancybox href="https://youtu.be/01tPfCNfYLg">Посмотреть трейлер сериала</a>
         </div>
@@ -94,21 +93,21 @@
             </h3>
             <ol class="seasons__inner">
                 <li class="seasons__item" style="background-image: url('images/seasons-image-1.jpg');">
-                    <a class="seasons__link href="#">Cмотреть</a>
+                    <a class="seasons__link href=" # ">Cмотреть</a>
                 </li>
-                <li class="seasons__item" style="background-image: url('images/seasons-image-2.jpg');">
+                <li class="seasons__item " style="background-image: url( 'images/seasons-image-2.jpg'); ">
                     <a class="seasons__link href="#">Cмотреть</a>
                 </li>
                 <li class="seasons__item" style="background-image: url('images/seasons-image-3.jpg');">
-                    <a class="seasons__link href="#">Cмотреть</a>
+                    <a class="seasons__link href=" # ">Cмотреть</a>
                 </li>
-                <li class="seasons__item" style="background-image: url('images/seasons-image-4.jpg');">
+                <li class="seasons__item " style="background-image: url( 'images/seasons-image-4.jpg'); ">
                     <a class="seasons__link href="#">Cмотреть</a>
                 </li>
                 <li class="seasons__item" style="background-image: url('images/seasons-image-5.jpg');">
-                    <a class="seasons__link href="#">Cмотреть</a>
+                    <a class="seasons__link href=" # ">Cмотреть</a>
                 </li>
-                <li class="seasons__item" style="background-image: url('images/seasons-image-6.jpg');">
+                <li class="seasons__item " style="background-image: url( 'images/seasons-image-6.jpg'); ">
                     <a class="seasons__link href="#">Cмотреть</a>
                 </li>
             </ol>
@@ -134,7 +133,8 @@
                             Рагна́р Лодбро́к (др.-сканд. Ragnarr Loðbrók) - полулегендарный скандинавский конунг из рода Инглингов, ключевой персонаж сериала.
                         </p>
                         <p>
-                            Умелый воин и амбициозный вождь, Рагнар на протяжении почти всей своей жизни следует пути викинга. Рассекая море в поисках боевой славы и наживы, он стремится обрести новые знания, открыть неизвестные земли и изменить нелегкую судьбу своего народа, живущего в суровых условиях Скандинавского полуострова
+                            Умелый воин и амбициозный вождь, Рагнар на протяжении почти всей своей жизни следует пути викинга. Рассекая море в поисках боевой славы и наживы, он стремится обрести новые знания, открыть неизвестные земли и изменить нелегкую судьбу своего народа, живущего
+                            в суровых условиях Скандинавского полуострова
                         </p>
                     </div>
                     <div class="heroes__text">
@@ -145,7 +145,8 @@
                             Рагна́р Лодбро́к (др.-сканд. Ragnarr Loðbrók) - полулегендарный скандинавский конунг из рода Инглингов, ключевой персонаж сериала.
                         </p>
                         <p>
-                            Умелый воин и амбициозный вождь, Рагнар на протяжении почти всей своей жизни следует пути викинга. Рассекая море в поисках боевой славы и наживы, он стремится обрести новые знания, открыть неизвестные земли и изменить нелегкую судьбу своего народа, живущего в суровых условиях Скандинавского полуострова
+                            Умелый воин и амбициозный вождь, Рагнар на протяжении почти всей своей жизни следует пути викинга. Рассекая море в поисках боевой славы и наживы, он стремится обрести новые знания, открыть неизвестные земли и изменить нелегкую судьбу своего народа, живущего
+                            в суровых условиях Скандинавского полуострова
                         </p>
                     </div>
                     <div class="heroes__text">
@@ -156,7 +157,8 @@
                             Рагна́р Лодбро́к (др.-сканд. Ragnarr Loðbrók) - полулегендарный скандинавский конунг из рода Инглингов, ключевой персонаж сериала.
                         </p>
                         <p>
-                            Умелый воин и амбициозный вождь, Рагнар на протяжении почти всей своей жизни следует пути викинга. Рассекая море в поисках боевой славы и наживы, он стремится обрести новые знания, открыть неизвестные земли и изменить нелегкую судьбу своего народа, живущего в суровых условиях Скандинавского полуострова
+                            Умелый воин и амбициозный вождь, Рагнар на протяжении почти всей своей жизни следует пути викинга. Рассекая море в поисках боевой славы и наживы, он стремится обрести новые знания, открыть неизвестные земли и изменить нелегкую судьбу своего народа, живущего
+                            в суровых условиях Скандинавского полуострова
                         </p>
                     </div>
                 </div>
@@ -166,11 +168,11 @@
     <footer class="footer">
         <div class="container">
             <p class="copy">
-                Сериал «Викинги». Правами на сериал владеет канал History.
+                Сериал «Викинги». Правами на сериал владеет канал History. Copyright.
             </p>
         </div>
     </footer>
-    
+
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="js/slick.min.js"></script>
