--- a/index.html
+++ b/index.html
@@ -172,7 +172,9 @@
             </p>
         </div>
     </footer>
+    <section>
 
+    </section>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="js/slick.min.js"></script>
