--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
     <footer class="footer">
         <div class="container">
             <p class="copy">
-                Сериал «Викинги». Правами на сериал владеет канал History. Copyrightk.
+                Сериал «Викинги». Правами на сериал владеет канал History. Copyright34k.
             </p>
         </div>
     </footer>
