--- a/index.html
+++ b/index.html
@@ -122,12 +122,12 @@
                 <div class="heroes__slider-img">
                     <img src="images/hero-1.jpg" class="heroes__images" alt="">
                     <img src="images/hero-2.jpg" class="heroes__images" alt="">
-                    <img src="images/hero-1.jpg" class="heroes__images" alt="">
+                    <img src="images/hero-3.jpg" class="heroes__images" alt="">
                 </div>
                 <div class="heroes__slider-text">
                     <div class="heroes__text">
                         <h4 class="heroes__name">
-                            Рагнар1
+                            Рагнар
                         </h4>
                         <p>
                             Рагна́р Лодбро́к (др.-сканд. Ragnarr Loðbrók) - полулегендарный скандинавский конунг из рода Инглингов, ключевой персонаж сериала.
@@ -139,26 +139,27 @@
                     </div>
                     <div class="heroes__text">
                         <h4 class="heroes__name">
-                            Рагнар2
+                            Бьёрн
                         </h4>
                         <p>
-                            Рагна́р Лодбро́к (др.-сканд. Ragnarr Loðbrók) - полулегендарный скандинавский конунг из рода Инглингов, ключевой персонаж сериала.
+                            Бьёрн Железнобокий (др.-сканд. Björn Járnsíða, швед. Björn Järnsida) - полулегендарный скандинавский конунг из рода Инглингов, ключевой персонаж сериала.
                         </p>
                         <p>
-                            Умелый воин и амбициозный вождь, Рагнар на протяжении почти всей своей жизни следует пути викинга. Рассекая море в поисках боевой славы и наживы, он стремится обрести новые знания, открыть неизвестные земли и изменить нелегкую судьбу своего народа, живущего
-                            в суровых условиях Скандинавского полуострова
+                            Сильный и решительный человек, Бьёрн намерен стать великим воином, лидером и первооткрывателем. Он полностью разделяет жажду своего отца к приключениям и поддерживает его, регулярно участвуя в грабительских набегах викингов. Набравшись опыта в сражениях
+                            и мореплавании, возглавляет собственные походы. Необыкновенная стойкость и выносливость в бою побуждают отца дать Бьёрну прозвище «Железнобокий», под которым он и входит в историю. Будучи самым старшим из сыновей конунга Рагнара,
+                            Бьёрн по праву претендует на трон Каттегата.
                         </p>
                     </div>
                     <div class="heroes__text">
                         <h4 class="heroes__name">
-                            Рагнар3
+                            Лаге́рта
                         </h4>
                         <p>
-                            Рагна́р Лодбро́к (др.-сканд. Ragnarr Loðbrók) - полулегендарный скандинавский конунг из рода Инглингов, ключевой персонаж сериала.
+                            Рагна́р Лодбро́к (или Хладге́рда, др.-сканд. Hlaðgerðr, лат. Ladgerda, Ladgertha или Lagertha; в сериале также носит псевдоним Ингстад) - известная скандинавская воительница, упомянутая в хрониках Саксона Грамматика, первая жена датского морского конунга
+                            Рагнара Лодброка. В сериале Лагерта активно участвует в походах викингов, колонизации ими новых земель и междоусобных распрях скандинавских вождей.
                         </p>
                         <p>
-                            Умелый воин и амбициозный вождь, Рагнар на протяжении почти всей своей жизни следует пути викинга. Рассекая море в поисках боевой славы и наживы, он стремится обрести новые знания, открыть неизвестные земли и изменить нелегкую судьбу своего народа, живущего
-                            в суровых условиях Скандинавского полуострова
+                            Эта отважная и независимая женщина способна проявлять железную решимость, когда дело касается ее личного достоинства, семьи или власти. Лагерта также известна своим милосердием и благородством.
                         </p>
                     </div>
                 </div>
