--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,400;0,700;1,300&display=swap" rel="stylesheet">
+    <title>Viking</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,400;0,700;1,300&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/slick.css">
     <link rel="stylesheet" href="css/jquery.fancybox.css">
@@ -67,12 +68,18 @@
                 </ul>
                 <div class="about__text">
                     <p>
-                        Викинги – шикарный исторический сериал, один из лучших в своем жанре, шоу может похвастаться огромной фан-базой, а также тем, что пробудил интерес к истории и возродил моду на викингов.
+                        Викинги – шикарный исторический сериал, один из лучших в своем жанре, шоу может похвастаться
+                        огромной фан-базой, а также тем, что пробудил интерес к истории и возродил моду на викингов.
                     </p>
                     <p>
-                        «Викинги» созданы по заказу канала американского канала History, однако работали над ним канадцы и ирландцы. Сериал поражает масштабными сценами сражений, добротным и глубоким сценарием, а также максимальным вниманием к исторической эпохи. Авторы сериала
-                        потратили кучу времени и денег (бюджет первого сезона - $40 млн, дальше суммы возросли) на то, чтобы викинги и их современники выглядели в шоу так, какими они был в свое время – VIII – IX веках нашей эры. С другой стороны – отсутствие
-                        точных исторических фактов и (полу)легендарность многих событий позволили авторам сериала вольную трактовку многих событий.
+                        «Викинги» созданы по заказу канала американского канала History, однако работали над ним канадцы
+                        и ирландцы. Сериал поражает масштабными сценами сражений, добротным и глубоким сценарием, а
+                        также максимальным вниманием к исторической эпохи. Авторы сериала
+                        потратили кучу времени и денег (бюджет первого сезона - $40 млн, дальше суммы возросли) на то,
+                        чтобы викинги и их современники выглядели в шоу так, какими они был в свое время – VIII – IX
+                        веках нашей эры. С другой стороны – отсутствие
+                        точных исторических фактов и (полу)легендарность многих событий позволили авторам сериала
+                        вольную трактовку многих событий.
                     </p>
                 </div>
             </div>
@@ -93,28 +100,26 @@
             </h3>
             <ol class="seasons__inner">
                 <li class="seasons__item" style="background-image: url('images/seasons-image-1.jpg');">
-                    <a class="seasons__link href=" # ">Cмотреть</a>
+                    <a class="seasons__link" href=" # ">Cмотреть</a>
                 </li>
                 <li class="seasons__item " style="background-image: url( 'images/seasons-image-2.jpg'); ">
-                    <a class="seasons__link href="#">Cмотреть</a>
+                    <a class="seasons__link" href="#">Cмотреть</a>
                 </li>
                 <li class="seasons__item" style="background-image: url('images/seasons-image-3.jpg');">
-                    <a class="seasons__link href=" # ">Cмотреть</a>
+                    <a class="seasons__link" href=" # ">Cмотреть</a>
                 </li>
                 <li class="seasons__item " style="background-image: url( 'images/seasons-image-4.jpg'); ">
-                    <a class="seasons__link href="#">Cмотреть</a>
+                    <a class="seasons__link" href="#">Cмотреть</a>
                 </li>
                 <li class="seasons__item" style="background-image: url('images/seasons-image-5.jpg');">
-                    <a class="seasons__link href=" # ">Cмотреть</a>
+                    <a class="seasons__link" href=" # ">Cмотреть</a>
                 </li>
                 <li class="seasons__item " style="background-image: url( 'images/seasons-image-6.jpg'); ">
-                    <a class="seasons__link href="#">Cмотреть</a>
+                    <a class="seasons__link" href="#">Cмотреть</a>
                 </li>
             </ol>
         </div>
     </section>
-
-
     <section class="heroes section-page">
         <div class="container">
             <h3 class="title">Главные герои</h3>
@@ -130,10 +135,13 @@
                             Рагнар
                         </h4>
                         <p>
-                            Рагна́р Лодбро́к (др.-сканд. Ragnarr Loðbrók) - полулегендарный скандинавский конунг из рода Инглингов, ключевой персонаж сериала.
+                            Рагна́р Лодбро́к (др.-сканд. Ragnarr Loðbrók) - полулегендарный скандинавский конунг из рода
+                            Инглингов, ключевой персонаж сериала.
                         </p>
                         <p>
-                            Умелый воин и амбициозный вождь, Рагнар на протяжении почти всей своей жизни следует пути викинга. Рассекая море в поисках боевой славы и наживы, он стремится обрести новые знания, открыть неизвестные земли и изменить нелегкую судьбу своего народа, живущего
+                            Умелый воин и амбициозный вождь, Рагнар на протяжении почти всей своей жизни следует пути
+                            викинга. Рассекая море в поисках боевой славы и наживы, он стремится обрести новые знания,
+                            открыть неизвестные земли и изменить нелегкую судьбу своего народа, живущего
                             в суровых условиях Скандинавского полуострова
                         </p>
                     </div>
@@ -142,11 +150,16 @@
                             Бьёрн
                         </h4>
                         <p>
-                            Бьёрн Железнобокий (др.-сканд. Björn Járnsíða, швед. Björn Järnsida) - полулегендарный скандинавский конунг из рода Инглингов, ключевой персонаж сериала.
+                            Бьёрн Железнобокий (др.-сканд. Björn Járnsíða, швед. Björn Järnsida) - полулегендарный
+                            скандинавский конунг из рода Инглингов, ключевой персонаж сериала.
                         </p>
                         <p>
-                            Сильный и решительный человек, Бьёрн намерен стать великим воином, лидером и первооткрывателем. Он полностью разделяет жажду своего отца к приключениям и поддерживает его, регулярно участвуя в грабительских набегах викингов. Набравшись опыта в сражениях
-                            и мореплавании, возглавляет собственные походы. Необыкновенная стойкость и выносливость в бою побуждают отца дать Бьёрну прозвище «Железнобокий», под которым он и входит в историю. Будучи самым старшим из сыновей конунга Рагнара,
+                            Сильный и решительный человек, Бьёрн намерен стать великим воином, лидером и
+                            первооткрывателем. Он полностью разделяет жажду своего отца к приключениям и поддерживает
+                            его, регулярно участвуя в грабительских набегах викингов. Набравшись опыта в сражениях
+                            и мореплавании, возглавляет собственные походы. Необыкновенная стойкость и выносливость в
+                            бою побуждают отца дать Бьёрну прозвище «Железнобокий», под которым он и входит в историю.
+                            Будучи самым старшим из сыновей конунга Рагнара,
                             Бьёрн по праву претендует на трон Каттегата.
                         </p>
                     </div>
@@ -155,11 +168,16 @@
                             Лаге́рта
                         </h4>
                         <p>
-                            Рагна́р Лодбро́к (или Хладге́рда, др.-сканд. Hlaðgerðr, лат. Ladgerda, Ladgertha или Lagertha; в сериале также носит псевдоним Ингстад) - известная скандинавская воительница, упомянутая в хрониках Саксона Грамматика, первая жена датского морского конунга
-                            Рагнара Лодброка. В сериале Лагерта активно участвует в походах викингов, колонизации ими новых земель и междоусобных распрях скандинавских вождей.
+                            Рагна́р Лодбро́к (или Хладге́рда, др.-сканд. Hlaðgerðr, лат. Ladgerda, Ladgertha или
+                            Lagertha; в сериале также носит псевдоним Ингстад) - известная скандинавская воительница,
+                            упомянутая в хрониках Саксона Грамматика, первая жена датского морского конунга
+                            Рагнара Лодброка. В сериале Лагерта активно участвует в походах викингов, колонизации ими
+                            новых земель и междоусобных распрях скандинавских вождей.
                         </p>
                         <p>
-                            Эта отважная и независимая женщина способна проявлять железную решимость, когда дело касается ее личного достоинства, семьи или власти. Лагерта также известна своим милосердием и благородством.
+                            Эта отважная и независимая женщина способна проявлять железную решимость, когда дело
+                            касается ее личного достоинства, семьи или власти. Лагерта также известна своим милосердием
+                            и благородством.
                         </p>
                     </div>
                 </div>
