add on the hosting timeweb.ru

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
 <body>
     <header class="header">
         <nav class="menu">
+            <button class="menu__bnt">
+                <span></span>
+            </button>
             <ul class="menu__list">
                 <li class="menu__list-item">
                     <a href="#" class="menu__list-link">1 сезон</a>
@@ -42,7 +45,8 @@
             <img src="images/logo.png" alt="логотип" class="logo__img">
         </div>
     </header>
-    <section class="about section-page">
+
+        <section class="about section-page">
         <div class="container">
             <h3 class="title">
                 О сериале
@@ -85,6 +89,7 @@
             </div>
         </div>
     </section>
+
     <section class="video">
         <div class="container">
             <h3 class="video__text">
@@ -117,9 +122,10 @@
                 <li class="seasons__item " style="background-image: url( 'images/seasons-image-6.jpg'); ">
                     <a class="seasons__link" href="#">Cмотреть</a>
                 </li>
-            </ol>
+            </ol>   
         </div>
     </section>
+
     <section class="heroes section-page">
         <div class="container">
             <h3 class="title">Главные герои</h3>
@@ -191,9 +197,7 @@
             </p>
         </div>
     </footer>
-    <section>
 
-    </section>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="js/slick.min.js"></script>
