--- a/season-1.html
+++ b/season-1.html
@@ -17,6 +17,9 @@
 <body>
     <header class="page-header">
         <nav class="menu">
+            <button class="menu__bnt">
+                <span></span>
+            </button>
             <div class="menu-container">
                 <a href="#" class="page-logo">
                     <img src="images/page-logo.png" alt="logo">
